feat: enhance Vite configuration and add plugins for Node.js support
- Updated vite.config.js to improve CDN asset replacement with error handling and added server watch options to ignore specific directories and files.
- Created .viteignore file to specify ignored files and directories during the build process.
- Added default avatar SVG asset for user profiles.
- Implemented vite-plugin-external-node to mark Node.js built-in modules as external dependencies for SSR builds.
- Developed vite-plugin-node-exclude to exclude Node.js specific modules from browser builds.
- Introduced vite-plugin-node-polyfill to provide Node.js polyfills for the browser environment.

--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "@sentry/cli": "^2.50.2",
     "@sentry/profiling-node": "^9.40.0",
     "@sentry/vite-plugin": "^3.6.1",
+    "@spotlightjs/astro": "^3.2.5",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.52.0",
     "@tailwindcss/vite": "^4.1.11",
