Refactor blog components and enhance particle background
- Updated Particle.astro to improve p5.js loading logic and prevent SSR hydration issues.
- Enhanced PostCard.astro to support a minimal variant and added reading time calculation.
- Revamped blog index page to include a hero section, recent posts, and explore topics with improved styling.
- Improved pagination and navigation in blog pages for better user experience.
- Refactored tag pages to display posts with better formatting and navigation options.
- Cleaned up unnecessary files and updated package metadata.

--- a/.gitignore
+++ b/.gitignore
@@ -140,3 +140,12 @@ pnpm-workspace.yaml
 .cursorindexingignore
 .cursorignore
 .amplify-hosting
+business-strategy
+demo_balance_report.json
+demo_client_scenarios.json
+demo_conversations.json
+demo_therapeutic_responses.json
+demo_validation_results.json
+CDN-SETUP.md
+ISSUE_BIAS_DETECTION_LAYER_WEIGHTS.md
+pixelated-empathy-agent.yaml
