--- a/src/components/tsconfig.json
+++ b/src/components/tsconfig.json
@@ -1,33 +1,19 @@
 {
+  "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "target": "ESNext",
-    "module": "ESNext",
-    "moduleResolution": "bundler",
-    "lib": ["ESNext", "DOM", "DOM.Iterable"],
-    "jsx": "react-jsx",
-    "jsxImportSource": "react",
     "baseUrl": "../../",
-    "allowJs": true,
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "strict": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true,
-    "types": ["node", "react", "react-dom"],
-    "skipLibCheck": true,
     "paths": {
       "~/*": ["./src/*"],
-      "@/*": ["src/*"],
+      "@/*": ["./src/*"],
       "@components/*": ["./src/components/*"],
       "@layouts/*": ["./src/layouts/*"],
       "@utils/*": ["./src/utils/*"],
       "@lib/*": ["./src/lib/*"],
-      "@types/*": ["src/types/*"]
+      "@types/*": ["./src/types/*"]
     }
   },
   "include": [
+    "./**/*.astro",
     "./**/*.tsx", 
     "./**/*.ts"
   ]
