feat(dlp): add DLP rules management component
- Implemented rule update and deletion handling with event listeners.
- Added functionality to remove rules from the UI and display a "No rules" message when applicable.
- Created a TypeScript configuration for the DLP component.

--- a/src/components/tsconfig.json
+++ b/src/components/tsconfig.json
@@ -1,20 +1,31 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../astro/tsconfigs/strict.json",
   "compilerOptions": {
-    "baseUrl": "../../",
+    "module": "ESNext",
+    "target": "ESNext",
+    "moduleResolution": "bundler",
+    "jsx": "react-jsx",
+    "jsxImportSource": "react",
+    "baseUrl": "../..",
     "paths": {
-      "~/*": ["./src/*"],
-      "@/*": ["./src/*"],
-      "@components/*": ["./src/components/*"],
-      "@layouts/*": ["./src/layouts/*"],
-      "@utils/*": ["./src/utils/*"],
-      "@lib/*": ["./src/lib/*"],
-      "@types/*": ["./src/types/*"]
+      "~/*": ["src/*"],
+      "@/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@utils/*": ["src/utils/*"],
+      "@lib/*": ["src/lib/*"],
+      "@types/*": ["src/types/*"]
     }
   },
   "include": [
     "./**/*.astro",
     "./**/*.tsx", 
     "./**/*.ts"
+  ],
+  "exclude": [
+    "**/*.js",
+    "**/*.astro.ts",
+    "**/*.astro.js",
+    "**/*.bak"
   ]
 }
