Refactor code structure for improved readability and maintainability

--- a/src/components/admin/dlp/tsconfig.json
+++ b/src/components/admin/dlp/tsconfig.json
@@ -1,16 +1,11 @@
 {
-  "extends": "../../../tsconfig.json",
+  "extends": "../../../../tsconfig.json",
   "compilerOptions": {
-    "jsx": "react-jsx",
-    "jsxImportSource": "react",
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "skipLibCheck": true,
-    "noEmit": true,
-    "types": ["react", "react-dom", "node"]
+    "types": ["node", "react", "react-dom"]
   },
   "include": [
     "./*.tsx",
-    "./*.ts"
+    "./*.ts",
+    "./*.astro"
   ]
 }
