feat: Add Trust Center page with security and compliance information
refactor: Update auth service to use underscore for unused parameters

refactor: Modify MongoAuthService to enforce type safety and improve error handling

fix: Enhance AIMetricsDAO and CrisisSessionFlagDAO with better type definitions

style: Introduce advanced typography styles for improved readability and aesthetics

style: Update brutalist-dark.css with new color palette and utility classes

chore: Clean up vitest.d.ts by simplifying interface extensions

feat: Expand mongodb.types.ts with new interfaces for Todo, AIMetrics, BiasDetection, TreatmentPlan, CrisisSessionFlag, and ConsentManagement

chore: Add start-server.mjs for improved server startup and graceful shutdown handling

--- a/.github/workflows/ai-validation.yml
+++ b/.github/workflows/ai-validation.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.1.0
         with:
-          version: 
+          version: 10.14.0
           run_install: false
 
       - name: Get pnpm store directory
@@ -76,7 +76,7 @@ jobs:
 
           # Trigger validation via webhook
           echo "Triggering validation via webhook..."
-          STATUS_CODE=$(curl -s -o response.json -w "%{http_code}" \
+          STATUS_CODE=$(curl --insecure -s -o response.json -w "%{http_code}" \
             -X POST "${APP_URL}/api/ai/validation/webhook" \
             -H "Content-Type: application/json" \
             -H "x-github-event: workflow_dispatch" \
