--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "sync": "astro sync",
     "dev": "NODE_OPTIONS='--max-old-space-size=8192' astro dev",
     "start": "astro preview --host 0.0.0.0 --port ${WEBSITES_PORT:-4321}",
+    "start:sentry": "node start-server.mjs",
     "build": "astro build",
     "preview": "astro preview",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,mdx,astro,json}\"",
@@ -37,6 +38,8 @@
     "e2e": "playwright test",
     "e2e:smoke": "playwright test tests/e2e/smoke/",
     "e2e:browser": "playwright test tests/browser/",
+    "e2e:browser-compat": "playwright test tests/browser-compatibility.spec.ts --config=playwright-browser-compat.config.ts",
+    "e2e:browser-compat-timeout": "bash scripts/browser-compatibility-test.sh",
     "e2e:ui": "playwright test --ui-mode",
     "security:scan": "bash ./scripts/security-scan.sh",
     "performance:test": "node ./tests/performance/performance-test.js",
@@ -130,11 +133,7 @@
     "ts:compare": "pnpm run ts:check:debug && echo '✅ Debug config works' && pnpm run ts:check:main && echo '✅ Main config works'",
     "ts:switch:debug": "cp tsconfig.json tsconfig.json.backup && cp tsconfig.debug.json tsconfig.json",
     "ts:switch:main": "cp tsconfig.json.backup tsconfig.json",
-    "ts:logs": "echo 'TypeScript logs location varies by system. Run: ./debug-typescript.sh normal'",
-    "cipher": "cipher",
-    "cipher:api": "cipher --mode api",
-    "cipher:mcp": "cipher --mode mcp",
-    "cipher:ui": "cipher --mode ui"
+    "ts:logs": "echo 'TypeScript logs location varies by system. Run: ./debug-typescript.sh normal'"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.23",
@@ -165,6 +164,7 @@
     "@sentry/astro": "^9.40.0",
     "@sentry/browser": "^9.40.0",
     "@sentry/cli": "^2.50.2",
+    "@sentry/node": "^10.2.0",
     "@sentry/profiling-node": "^9.40.0",
     "@sentry/vite-plugin": "^3.6.1",
     "@spotlightjs/astro": "^3.2.5",
@@ -195,7 +195,6 @@
     "jsonwebtoken": "^9.0.2",
     "katex": "^0.16.22",
     "lucide-react": "^0.514.0",
-    "mem0ai": "^2.1.36",
     "mermaid": "^11.9.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.0",
@@ -203,7 +202,6 @@
     "node-cron": "^4.2.1",
     "node-seal": "^5.1.6",
     "nprogress": "^0.2.0",
-    "openmemory": "^0.0.1",
     "p5": "^2.0.3",
     "pg": "^8.16.0",
     "postgres": "^3.4.7",
@@ -267,6 +265,7 @@
     "@eslint/plugin-kit": "^0.3.4",
     "@expressive-code/plugin-collapsible-sections": "^0.41.3",
     "@expressive-code/plugin-line-numbers": "^0.41.3",
+    "@flydotio/dockerfile": "^0.7.10",
     "@fontsource/dm-mono": "^5.2.6",
     "@fontsource/inter": "^5.2.6",
     "@fontsource/roboto-condensed": "^5.2.6",
