--- a/.github/workflows/backup.yml
+++ b/.github/workflows/backup.yml
@@ -64,7 +64,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.1.0
         with:
-          version: 
+          version: 10.14.0
           run_install: false
 
       - name: Get pnpm store directory
