--- a/.github/workflows/browser-tests.yml
+++ b/.github/workflows/browser-tests.yml
@@ -13,7 +13,7 @@ on:
 
 env:
   NODE_VERSION: 22.16.0
-  PNPM_VERSION: 
+  PNPM_VERSION: 10.14.0
   NODE_ENV: test
 
 jobs:
@@ -33,7 +33,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.1.0
         with:
-          version: ${{ env.PNPM_VERSION }}
+          version: 10.14.0
 
       - name: Setup pnpm cache
         uses: actions/cache@v4
@@ -90,7 +90,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.1.0
         with:
-          version: ${{ env.PNPM_VERSION }}
+          version: 10.14.0
 
       - name: Setup pnpm cache
         uses: actions/cache@v4
