--- a/.github/workflows/deploy-aws-amplify.yml
+++ b/.github/workflows/deploy-aws-amplify.yml
@@ -11,7 +11,7 @@ on:
 
 env:
   NODE_VERSION: 22.16.0
-  PNPM_VERSION: 
+  PNPM_VERSION: 10.14.0
   NODE_ENV: production
   AWS_DEPLOYMENT: '1'
 
@@ -30,7 +30,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.1.0
         with:
-          version: ${{ env.PNPM_VERSION }}
+          version: 10.14.0
           run_install: false # avoid duplicate install
 
       - name: Get pnpm store directory
