--- a/.github/workflows/schedule-posts.yml
+++ b/.github/workflows/schedule-posts.yml
@@ -11,7 +11,7 @@ permissions:
 # Environment variables can be defined here
 env:
   NODE_VERSION: 22.16.0
-  PNPM_VERSION: 
+  PNPM_VERSION: 10.14.0
   NODE_ENV: production
 
 jobs:
@@ -29,7 +29,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4.1.0
         with:
-          version: ${{ env.PNPM_VERSION }}
+          version: 10.14.0
 
       - name: Get pnpm store directory
         shell: bash
