--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,11 @@ dependencies = [
   "pyarrow>=21.0.0",
   "hatch>=1.14.1",
   "textstat>=0.7.8",
+  "isort>=6.0.1",
+  "black>=25.1.0",
+  "pytest-cov>=6.2.1",
+  "seaborn>=0.13.2",
+  "plotly>=6.2.0",
 ]
 
 [project.optional-dependencies]
